@@ -5,7 +5,7 @@ package net.sf.openrocket.gui.widgets;
  * Java source file for the class MultiSlider
  *
  * Copyright (c), 1999 - 2002, Masahiro Takatsuka and GeoVISTA Center
- * All Rights Researved.
+ * All Rights Reserved.
  *
  * Original Author: Masahiro Takatsuka
  * $Author: eytanadar $
@@ -37,7 +37,7 @@ import javax.swing.plaf.SliderUI;
   Implementation of class MultiSlider
   ====================================================================*/
 /***
- * A component that lets the user graphically select values by slding
+ * A component that lets the user graphically select values by sliding
  * multiple thumbs within a bounded interval. MultiSlider inherits all
  * fields and methods from javax.swing.JSlider.
  * <p>
@@ -70,7 +70,7 @@ public class MultiSlider extends JSlider {
 
 	/***
 	 * Creates a slider with the specified orientation and the
-	 * specified mimimum, maximum, and initial values.
+	 * specified minimum, maximum, and initial values.
 	 *
 	 * @exception IllegalArgumentException if orientation is not one of VERTICAL, HORIZONTAL
 	 *
@@ -88,7 +88,7 @@ public class MultiSlider extends JSlider {
 
 	/***
 	 * Creates a slider with the specified orientation and the
-	 * specified mimimum, maximum, and the number of thumbs.
+	 * specified minimum, maximum, and the number of thumbs.
 	 *
 	 * @exception IllegalArgumentException if orientation is not one of VERTICAL, HORIZONTAL
 	 *
@@ -105,7 +105,7 @@ public class MultiSlider extends JSlider {
 
 	/***
 	 * Creates a horizontal slider with the range 0 to 100 and
-	 * an intitial value of 50.
+	 * an initial value of 50.
 	 */
 	public MultiSlider() {
 		this(HORIZONTAL, 0, 100);
@@ -114,7 +114,7 @@ public class MultiSlider extends JSlider {
 
 	/***
 	 * Creates a slider using the specified orientation with the
-	 * range 0 to 100 and an intitial value of 50.
+	 * range 0 to 100 and an initial value of 50.
 	 */
 	public MultiSlider(int orientation) {
 		this(orientation, 0, 100);
@@ -123,7 +123,7 @@ public class MultiSlider extends JSlider {
 
 	/***
 	 * Creates a horizontal slider using the specified min and max
-	 * with an intitial value of 50.
+	 * with an initial value of 50.
 	 */
 	public MultiSlider(int min, int max) {
 		this(HORIZONTAL, min, max);
@@ -323,9 +323,9 @@ public class MultiSlider extends JSlider {
 				accessibleContext.firePropertyChange(
 						AccessibleContext.ACCESSIBLE_VALUE_PROPERTY,
 						(oldModel == null
-						? null : new Integer(oldModel.getValue())),
+						? null : Integer.valueOf(oldModel.getValue())),
 						(newModel == null
-						? null : new Integer(newModel.getValue())));
+						? null : Integer.valueOf(newModel.getValue())));
 			}
 		}
 
@@ -348,7 +348,7 @@ public class MultiSlider extends JSlider {
 		for (int i = 0; i < count; i++) {
 			getModelAt(i).setMinimum(minimum);
 		}
-		firePropertyChange( "minimum", new Integer( oldMin ), new Integer( minimum ) );
+		firePropertyChange("minimum", Integer.valueOf(oldMin), Integer.valueOf(minimum));
 	}
 
 	/***
@@ -367,7 +367,7 @@ public class MultiSlider extends JSlider {
 		for (int i = 0; i < count; i++) {
 			getModelAt(i).setMaximum(maximum);
 		}
-		firePropertyChange( "maximum", new Integer( oldMax ), new Integer( maximum ) );
+		firePropertyChange("maximum", Integer.valueOf(oldMax), Integer.valueOf(maximum));
 	}
 
 	/***
@@ -427,8 +427,8 @@ public class MultiSlider extends JSlider {
 		if (accessibleContext != null) {
 			accessibleContext.firePropertyChange(
 					AccessibleContext.ACCESSIBLE_VALUE_PROPERTY,
-					new Integer(oldValue),
-					new Integer(m.getValue()));
+					Integer.valueOf(oldValue),
+					Integer.valueOf(m.getValue()));
 		}
 	}
 
